Fix movie card spacing and footer alignment

--- a/src/Components/MovieCard/MovieCard.css
+++ b/src/Components/MovieCard/MovieCard.css
@@ -1,15 +1,22 @@
 .movie-card {
   border: .5pt solid white;
   width: 14rem;
+  height: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: .5rem
+  margin: .5rem;
 }
 .movie-card:hover {
   transition: all .75s;
   transform: scale(1.2);
   box-shadow: 0 0 0 99999px rgba(0, 0, 0, .5);
+}
+
+a {
+  display: flex;
+  flex-grow: 1;
+  justify-content: center;
 }
 
 .poster {
