--- a/src/Components/Movies/Movies.css
+++ b/src/Components/Movies/Movies.css
@@ -7,6 +7,6 @@
   flex-wrap: wrap;
   justify-content: space-evenly;
   width: 95vw;
-  margin-bottom: 3rem
+  margin-bottom: 3rem;
 }
 
